--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,11 @@
 
     <string name="accordion_one_title">Click me!</string>
     <string name="accordion_one_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Proin efficitur dui vel ipsum maximus efficitur.</string>
+
+
+    <string name="accordion_two_title">Click me too!</string>
+    <string name="accordion_two_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         Proin efficitur dui vel ipsum maximus efficitur. Etiam hendrerit tellus in tellus luctus,
         eu luctus magna facilisis. Morbi et mi dictum, semper velit sed, lobortis nisl. Curabitur
         urna sem, mattis et volutpat id, semper non dui. Maecenas aliquet porttitor risus, at
